--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -39,10 +39,13 @@ $tablet: 1024px;
 
 @mixin section-script {
   font-family: $font-script;
-  font-size: clamp(3rem, 3.5vw, 5rem);
+  font-size: clamp(3rem, 3.8vw, 5rem);
   display: block;
-  margin-bottom: -1.5rem;
+  margin-bottom: -1rem;
   line-height: 1;
+  position: relative;
+  z-index: 10;
+
   @media (max-width: $mobile) {
     margin-bottom: 0rem;
   }
@@ -52,6 +55,8 @@ $tablet: 1024px;
   font-size: clamp(2.5rem, 5vw, 5rem);
   font-weight: 900;
   line-height: 1;
+  position: relative;
+  z-index: 9;
 }
 
 @mixin section-description {
